fix: overflow hidden on single galleri

--- a/web/app/themes/osolo/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/osolo/resources/assets/styles/common/_global.scss
@@ -32,6 +32,10 @@ body {
     background-color: map-get($theme-colors, 'black');
     color: map-get($theme-colors, 'creme-white');
   }
+
+  &.single-galleri {
+    overflow: hidden;
+  }
 }
 
 a {
